java: client: add support for virtual threads